--- a/README.mkd
+++ b/README.mkd
@@ -2,13 +2,24 @@
 
 ## Notice: Pre-ALPHA
 
-A library for using Hector via JRuby.
+A Cassandra client for JRuby, backed by Hector.
 
 ## History
 
-This gem started as a fork of the `cassandra` gem. However it has
-come to look more like `clj-hector` in terms of the API.
+hector.rb started as a fork of the `cassandra` gem. However the
+API is now similar to `clj-hector`. 
 
 We may make this gem API compatible with the `cassandra` gem in
 the future.
+
+## References
+
+* https://github.com/pingles/clj-hector
+* http://prettyprint.me/2010/02/23/hector-a-java-cassandra-client/
+* https://github.com/fauna/cassandra
+
+## Author
+
+Nate Murray <nate@natemurray.com>
+http://www.xcombinator.com
 
